--- a/.github/options.toml
+++ b/.github/options.toml
@@ -1,5 +1,5 @@
 ['custom-branding']
-appName = "YouTube"
+appName = "JpDrg Tube"
 
 ['custom-video-speed']
 granularity = "16"
@@ -16,5 +16,4 @@ accentPressedColor = "#ff169c46"
 
 [theme]
 darkThemeBackgroundColor = "@android:color/black"
-lightThemeBackgroundColor = "@android:color/white"
-darkThemeSeekbarColor = "#ffff0000"
+darkThemeSeekbarColor = "##2596be"
